Expand smoke coverage for synthetic NO_TXN locks